# rust_login

./: .gitignore  Cargo.toml  README.md  brunch-config.js  package.json
app/: App.js  initialize.js
app/assets/: index.html  session_index.html
app/components/: App.js  simpleForm.js
app/components/home/: Form.js  LoginForm.js  RegisterForm.js  simpleForm.js
app/pages/: HomePage.js  Index.js  NotFoundPage.js  SettingsPage.js
app/utils/: RequestUtils.js
migrations/20170821123515_create_users/: up.sql
src/: main.rs  models.rs  session.rs  users.rs  utils.rs
src/users/: api.rs  mod.rs  session.rs  validations.rs
