[package]
name = "rust_login"
version = "0.1.0"
authors = ["Rafael Klaessen <rafaelklaessen.nl@gmail.com>"]

[dependencies]
iron = "0.5.*"
router = "*"
staticfile = "*"
urlencoded = "*"
iron-sessionstorage = "*"
diesel = { version = "0.15.0", features = ["postgres"] }
diesel_codegen = { version = "0.15.0", features = ["postgres"] }
dotenv = "0.9.0"
rustc-serialize = "0.3"
regex = "0.2"
bcrypt = "0.1"

[dependencies.mount]
git = "https://github.com/iron/mount.git"
